--- a/package.json
+++ b/package.json
@@ -6,21 +6,33 @@
 	"scripts": {
 		"build": "rimraf ./build && npx tsc && tsc-alias",
 		"start": "node build/index.js",
-		"dev": "concurrently \"npx tsc --watch\" \"tsc-alias\" \"nodemon -q build/index.js\""
+		"dev": "concurrently \"rimraf ./build\" \"npx tsc --watch\" \"tsc-alias\" \"nodemon -q build/index.js\""
 	},
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"@woocommerce/woocommerce-rest-api": "^1.0.1",
 		"cors": "^2.8.5",
 		"dotenv": "^16.0.3",
 		"express": "^4.18.2",
-		"module-alias": "^2.2.2"
+		"express-list-endpoints": "^6.0.0",
+		"module-alias": "^2.2.2",
+		"pg": "^8.9.0",
+		"reflect-metadata": "^0.1.13",
+		"sequelize": "^6.28.0",
+		"sequelize-typescript": "^2.1.5",
+		"shopify-api-node": "^3.12.2",
+		"uuid": "^9.0.0"
 	},
 	"devDependencies": {
 		"@types/cors": "^2.8.13",
 		"@types/express": "^4.17.17",
+		"@types/express-list-endpoints": "^6.0.0",
 		"@types/node": "^18.14.0",
+		"@types/sequelize": "^4.28.14",
+		"@types/uuid": "^9.0.0",
+		"@types/woocommerce__woocommerce-rest-api": "^1.0.2",
 		"@typescript-eslint/eslint-plugin": "^5.52.0",
 		"@typescript-eslint/parser": "^5.52.0",
 		"concurrently": "^7.6.0",
@@ -33,9 +45,8 @@
 		"typescript": "^4.9.5"
 	},
 	"_moduleAliases": {
-		"@root": "./src",
-		"application": "./application",
-		"domain": "./domain",
-		"infrastructure": "./infrastructure"
+		"application": "./build/application",
+		"domain": "./build/domain",
+		"infrastructure": "./build/infrastructure"
 	}
 }
